Mudado o nome da classe container_2 para cadastroReceita no index.php e style.css, adicionado também a classe submit ao botão de submit do cadastroReceita

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ body{
 }
 /*      Nav-end-css        */
 
-.container_2{
+.cadastroReceita{
     position: absolute;
     left: 40%;
     top: 50%;
@@ -104,7 +104,7 @@ body{
     padding: 15px;
 }
 
-.container_2 fieldset{
+.cadastroReceita fieldset{
     padding: 15px;
 }
 
