--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body{
 }
 
 .navigation ul li:hover{
-    background-color: white;
+    background-color: #f5f5f5;
     
 }
 
@@ -61,7 +61,7 @@ body{
     height: 50px;
     border-radius: 50%;
     background-color: transparent;
-    box-shadow: 35px 35px 0 10px white;
+    box-shadow: 35px 35px 0 10px #f5f5f5;
 }
 
 .navigation ul li:hover a::after{
@@ -73,7 +73,7 @@ body{
     height: 50px;
     border-radius: 50%;
     background-color: transparent;
-    box-shadow: 35px -35px 0 10px white;
+    box-shadow: 35px -35px 0 10px #f5f5f5;
 }
 
 .navigation ul li a{
@@ -164,4 +164,40 @@ label{
 .inputD{
     width: 20em;
     height: 4vh;
+}
+/*      CadastroDespesa-end-css        */
+/*      Lista-start-css        */
+
+.listarDespesa{
+    height: 6vh;
+    position: absolute;
+    left: 60%; 
+    top: 10%;
+    transform: translate(-50%, -50%);
+    width: 60em;
+    background-color: #287bff;
+    font-size: 16px;
+    color: white;
+}
+.listarReceita{
+    height: 6vh;
+    position: absolute;
+    left: 60%; 
+    top: 20%;
+    transform: translate(-50%, -50%);
+    width: 60em;
+    background-color: #287bff;
+    font-size: 16px;
+    color: white;
+}
+.listarConta{
+    height: 6vh;
+    position: absolute;
+    left: 60%; 
+    top: 30%;
+    transform: translate(-50%, -50%);
+    width: 60em;
+    background-color: #287bff;
+    font-size: 16px;
+    color: white;
 }
